# docs/api/openapi.yml
@@ -1494,8 +1494,6 @@ components:
           enum:
             - email
             - webhook
-            - slack
-            - discord
           type: string
           x-struct:
           x-validate:
@@ -1547,8 +1545,6 @@ components:
           enum:
             - email
             - webhook
-            - slack
-            - discord
           type: string
           x-struct:
           x-validate:
@@ -1596,8 +1592,6 @@ components:
                 enum:
                   - email
                   - webhook
-                  - slack
-                  - discord
                 type: string
                 x-struct:
                 x-validate:
@@ -1667,8 +1661,6 @@ components:
               enum:
                 - email
                 - webhook
-                - slack
-                - discord
               type: string
               x-struct:
               x-validate:
@@ -4615,8 +4607,6 @@ paths:
                           enum:
                             - email
                             - webhook
-                            - slack
-                            - discord
                           type: string
                           x-struct:
                           x-validate:
@@ -4720,8 +4710,6 @@ paths:
                   enum:
                     - email
                     - webhook
-                    - slack
-                    - discord
                   type: string
                   x-struct:
                   x-validate:
@@ -4774,8 +4762,6 @@ paths:
                         enum:
                           - email
                           - webhook
-                          - slack
-                          - discord
                         type: string
                         x-struct:
                         x-validate:
@@ -4949,8 +4935,6 @@ paths:
                         enum:
                           - email
                           - webhook
-                          - slack
-                          - discord
                         type: string
                         x-struct:
                         x-validate:
@@ -5101,8 +5085,6 @@ paths:
                         enum:
                           - email
                           - webhook
-                          - slack
-                          - discord
                         type: string
                         x-struct:
                         x-validate:
@@ -5276,8 +5258,6 @@ paths:
                         enum:
                           - email
                           - webhook
-                          - slack
-                          - discord
                         type: string
                         x-struct:
                         x-validate:
